[package]
name = "sagittarius"
version = "0.1.0"
authors = ["Quentincestino <quentindutilleul@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
